--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/DisplayMode.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/DisplayMode.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -17,7 +19,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.DisplayModeController">
+<AnchorPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.DisplayModeController">
     <children>
         <BorderPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" stylesheets="@style.css">
             <top>
@@ -62,45 +64,36 @@
                 </VBox>
             </top>
             <center>
-                <TabPane maxHeight="469.0" maxWidth="920.0" minHeight="435.0" minWidth="920.0" prefHeight="469.0" prefWidth="920.0" style="-fx-border-color: black;" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+                <TabPane fx:id="displayTabPane" maxHeight="435.0" maxWidth="920.0" minHeight="435.0" minWidth="920.0" prefHeight="435.0" prefWidth="934.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
                     <tabs>
-                        <Tab text="Upcoming Matches">
+                        <Tab fx:id="upcomingMatchesTab" text="Upcoming Matches">
                             <content>
-                                <TableView prefHeight="200.0" prefWidth="200.0">
+                                <TableView fx:id="upcomingMatchesTable" prefHeight="441.0" prefWidth="934.0">
                                     <columns>
-                                        <TableColumn prefWidth="500.0" text="Teams" />
-                                        <TableColumn prefWidth="120.0" text="Date" />
-                                        <TableColumn prefWidth="120.0" text="Time" />
-                                        <TableColumn prefWidth="178.0" text="Place" />
+                                        <TableColumn fx:id="upcomTeamsColumn" prefWidth="310.0" text="Teams" />
+                                        <TableColumn fx:id="upcomResultColumn" minWidth="0.0" prefWidth="221.0" text="Result" />
+                                        <TableColumn fx:id="upcomDateColumn" minWidth="0.0" prefWidth="125.0" text="Date" />
+                                        <TableColumn fx:id="upcomTimeColumn" minWidth="0.0" prefWidth="125.0" text="Time" />
+                                        <TableColumn fx:id="upcomInfoColumn" minWidth="0.0" prefWidth="136.79998779296875" text="Info" />
                                     </columns>
                                 </TableView>
                             </content>
                         </Tab>
-                        <Tab text="Previous Matches">
+                        <Tab fx:id="previousMatchesTab" text="Previous Matches">
                             <content>
-                                <TableView prefHeight="200.0" prefWidth="200.0">
+                                <TableView fx:id="previousMatchesTable" prefHeight="441.0" prefWidth="934.0">
                                     <columns>
-                                        <TableColumn prefWidth="500.0" text="Teams" />
-                                        <TableColumn prefWidth="120.0" text="Date" />
-                                        <TableColumn prefWidth="120.0" text="Time" />
-                                        <TableColumn prefWidth="178.0" text="Place" />
+                                        <TableColumn fx:id="prevTeamsColumn" prefWidth="310.0" text="Teams" />
+                                        <TableColumn fx:id="prevResultColumn" minWidth="0.0" prefWidth="221.0" text="Result " />
+                                        <TableColumn fx:id="prevDateColumn" minWidth="0.0" prefWidth="125.0" text="Date" />
+                                        <TableColumn fx:id="prevTimeColumn" minWidth="0.0" prefWidth="125.0" text="Time" />
+                                        <TableColumn fx:id="prevInfoColumn" minWidth="0.0" prefWidth="136.79998779296875" text="Info" />
                                     </columns>
                                 </TableView>
                             </content>
                         </Tab>
-                        <Tab text="GroupStage">
-                            <content>
-                                <TableView prefHeight="200.0" prefWidth="200.0">
-                                    <columns>
-                                        <TableColumn prefWidth="500.0" text="Teams" />
-                                        <TableColumn prefWidth="120.0" text="Date" />
-                                        <TableColumn prefWidth="120.0" text="Time" />
-                                        <TableColumn prefWidth="178.0" text="Place" />
-                                    </columns>
-                                </TableView>
-                            </content>
-                        </Tab>
-                        <Tab text="KnockoutStage">
+                        <Tab fx:id="groupStageTab" text="GroupStage" />
+                        <Tab fx:id="knockoutStageTab" text="KnockoutStage">
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
