Added methods to fill groupStage tab in DisplayPage. bugs: adds groups two times

--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/BracketGroupContainer.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/BracketGroupContainer.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="421.0" prefWidth="485.0"
+<VBox alignment="CENTER" prefHeight="421.0" prefWidth="485.0"
       xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:id="BracketGroupContainer"
