--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterPointResults.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterPointResults.fxml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.EnterPointResultsController">
+<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.EnterPointResultsController">
     <children>
         <BorderPane prefHeight="540.0" prefWidth="960.0" stylesheets="@style.css">
             <top>
@@ -24,13 +33,13 @@
                 <AnchorPane maxWidth="930.0" minHeight="0.0" minWidth="0.0" prefHeight="431.0" prefWidth="930.0" style="-fx-border-color: lightgray;">
                      <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e4e4e480" height="88.0" layoutX="8.0" layoutY="308.0" stroke="#c3c1c1" strokeType="INSIDE" width="910.0" />
-                        <DatePicker fx:id="dateField" layoutX="33.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="MM/DD/YYYY" />
+                        <DatePicker fx:id="dateField" layoutX="33.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="DD.MM.YYYY" />
                         <Text fill="#5b5b5b" layoutX="138.0" layoutY="336.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date">
                            <font>
                               <Font size="20.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="timeField" layoutX="341.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="HH-MM" />
+                        <TextField fx:id="timeField" layoutX="341.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="HH:MM" />
                         <TextField fx:id="infoField" layoutX="649.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="Information" />
                         <Text fill="#5b5b5b" layoutX="444.0" layoutY="337.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time">
                            <font>
