--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/Menu.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/Menu.fxml
@@ -1,58 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="200.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.view.Menu">
+<VBox fx:id="menuVBox" alignment="CENTER" prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.MenuController">
    <children>
-      <VBox prefHeight="200.0" prefWidth="150.0" spacing="10.0">
-         <children>
-            <AnchorPane prefHeight="21.0" prefWidth="130.0">
-               <children>
-                  <Text layoutX="-1.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Menu">
-                     <font>
-                        <Font size="28.0" />
-                     </font>
-                  </Text>
-                  <Button layoutX="104.0" layoutY="2.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="26.0" style="-fx-background-color: red;" text="X" textFill="WHITE" />
-               </children>
-            </AnchorPane>
-            <Button maxHeight="10.0" maxWidth="130.0" mnemonicParsing="false" prefHeight="10.0" prefWidth="130.0" style="-fx-background-color: white;" text="Administrate">
-               <VBox.margin>
-                  <Insets top="5.0" />
-               </VBox.margin>
-               <effect>
-                  <InnerShadow />
-               </effect>
-            </Button>
-            <Button maxWidth="130.0" mnemonicParsing="false" prefWidth="130.0" style="-fx-background-color: white;" text="Display">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <effect>
-                  <InnerShadow />
-               </effect>
-            </Button>
-            <Button maxWidth="130.0" mnemonicParsing="false" prefWidth="130.0" style="-fx-background-color: white;" text="Edit Tuornament">
-               <effect>
-                  <InnerShadow />
-               </effect>
-            </Button>
-            <Button maxWidth="130.0" mnemonicParsing="false" prefWidth="130.0" style="-fx-background-color: white;" text="MainMenu">
-               <effect>
-                  <InnerShadow />
-               </effect>
-            </Button>
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </VBox>
+      <Button mnemonicParsing="false" fx:id="displayModeButton" onAction="#changeSceneToDisplayMode" prefHeight="74.0" prefWidth="326.0" text="Display Mode">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+      </Button>
+      <Button layoutX="127.0" fx:id="administrateTournamentButton" layoutY="143.0" mnemonicParsing="false" onAction="#changeSceneToAdministrateTournament" prefHeight="74.0" prefWidth="326.0" text="Administrate">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+      </Button>
+      <Button layoutX="127.0" layoutY="200.0" fx:id="editTournamentButton" mnemonicParsing="false" prefHeight="74.0" prefWidth="326.0" text="Edit Tournament">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+      </Button>
+      <Button layoutX="127.0" layoutY="217.0" fx:id="mainMenuButton" mnemonicParsing="false" onAction="#changeSceneToHomePage" prefHeight="74.0" prefWidth="326.0" text="Back to Menu" />
    </children>
-</AnchorPane>
+</VBox>
