edited BracketGroupContainer.fxml to fit all sizes of groups and added scrollpane to Display groups page

--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/BracketGroupContainer.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/BracketGroupContainer.fxml
@@ -1,19 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="421.0" prefWidth="485.0"
-      xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:id="BracketGroupContainer"
-      fx:controller="edu.ntnu.idatt1002.k1g01.controller.BracketGroupContainerController">
+
+<VBox fx:id="BracketGroupContainer" alignment="CENTER" prefHeight="421.0" prefWidth="421.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.BracketGroupContainerController">
     <!--> will out groups in this BBox <!-->
     </VBox>
-
-
-
-
